.k8s/deploy-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-dev-svc
  namespace: dev
spec:
  selector:
    app: backend-dev
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dev
  namespace: dev
  labels:
    app: backend-dev
spec:
  selector:
    matchLabels:
      app: backend-dev
  template:
    metadata:
      labels:
        app: backend-dev
    spec:
      affinity: {}
      containers:
      - image: gitlab.testprojects.ir:4567/root/colife-backend:__CI_COMMIT_SHORT_SHA__
        imagePullPolicy: Always
        name: container-0
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: gitlab
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
