.k8s/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-dev-ing
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  -  host: apidev.colifelabs.net
     http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: backend-dev-svc
            port:
              number: 8000
