.k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ing
  namespace: stage
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  -  host: api.colifelabs.net
     http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: backend-svc
            port:
              number: 8000
